objects/kugo2p__AdditionalChargeCredit__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings that functions as an auxiliary Product catalog. Good for charge lines, such Shipping &amp; Handling Fee</description>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultLineDescription__c</fullName>
        <description>Sets the initial Line Description text in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the initial Line Description text in Quote and Order configurator page</inlineHelpText>
        <label>Default Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultQuantity__c</fullName>
        <description>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1.</description>
        <inlineHelpText>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides Product in Quote and Order Configurator. Useful to prevent new sales of the Product, while allowing existing sales.</description>
        <inlineHelpText>Hides Product in Quote and Order Configurator. Useful to prevent new sales of the Product, while allowing existing sales</inlineHelpText>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipLabel>Additional Charges/Credits</relationshipLabel>
        <relationshipName>Additional_Charges_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockLineDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level.</description>
        <inlineHelpText>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level</inlineHelpText>
        <label>Lock Line Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level.</description>
        <inlineHelpText>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</inlineHelpText>
        <label>Lock Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockUnitPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Unit Price to be editable in Quote and Order configurator page. Does not lock the Unit Price at the record level.</description>
        <inlineHelpText>Prevents Unit Price to be editable in Quote and Order configurator page. Does not lock the Unit Price at the record level</inlineHelpText>
        <label>Lock Unit Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__MaximumQuantity__c</fullName>
        <description>Sets the maximum Quantity value limit in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the maximum Quantity value limit in Quote and Order configurator page</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__MinimumQuantity__c</fullName>
        <description>Sets the minimum Quantity value limit in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the minimum Quantity value limit in Quote and Order configurator page</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__OpportunitySyncProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference Product used in Syncing to Opportunity Products

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled. If Product is used only for Syncing purpose, best to set Additional Product Info &apos;Hide&apos; to Checked.</description>
        <inlineHelpText>Reference Product used in Syncing to Opportunity Products

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled. If Product is used only for Syncing purpose, best to set Additional Product Info &apos;Hide&apos; to Checked</inlineHelpText>
        <label>Opportunity Sync Product</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Additional Charges/Credits</relationshipLabel>
        <relationshipName>Additional_Charges_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityScale__c</fullName>
        <description>Sets the Quantity decimal support in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the Quantity decimal support in Quote and Order configurator page</inlineHelpText>
        <label>Quantity Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>Additional Charges/Credits</relationshipLabel>
        <relationshipName>Additional_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Charge/Credit</label>
    <nameField>
        <label>Additional Charge/Credit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Charges/Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>